Splash Screen Added (SplashActivity).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,7 @@
     android:theme="@style/AppTheme">
 
     <activity
-      android:name=".activities.MainActivity"
-      android:label="@string/title_activity_main"
-      android:theme="@style/AppTheme.NoActionBar">
+      android:name=".activities.SplashActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +20,10 @@
       </intent-filter>
     </activity>
 
+    <activity
+      android:name=".activities.MainActivity"
+      android:label="@string/title_activity_main"
+      android:theme="@style/AppTheme.NoActionBar" />
   </application>
 
 </manifest>
