--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,18 @@
     android:theme="@style/AppTheme">
 
     <activity
-      android:name=".activities.SplashActivity">
+      android:name=".activities.SplashActivity"
+      android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+
+    <activity
+      android:name=".activities.SetupActivity"
+      android:theme="@style/AppTheme.NoActionBar" />
 
     <activity
       android:name=".activities.MainActivity"
